# BUFY

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  cbindgen.toml
.cargo/: config.toml
BUFY.xcworkspace/: contents.xcworkspacedata
BUFY/BUFY/: BUFYApp.swift  ContentView.swift  Item.swift
BUFY/BUFY.xcodeproj/: project.pbxproj
BUFY/BUFYTests/: BUFYTests.swift
BUFY/BUFYUITests/: BUFYUITests.swift  BUFYUITestsLaunchTests.swift
benches/: performance.rs
bindings/: README.md
crates/budget_core/: Cargo.toml  build.rs
crates/bufy-config/: Cargo.toml
crates/bufy-config/src/: error.rs  lib.rs  manager.rs  model.rs
crates/bufy-config/tests/: config_tests.rs
crates/bufy-core/: Cargo.toml
crates/bufy-domain/: Cargo.toml
crates/bufy-ffi/: Cargo.toml
crates/bufy-storage-json/: Cargo.toml
docs/: cli_developer_reference.md  cli_user_guide.md  design_overview.md  development.md  domain_refactor_plan.md  ffi_spec.md  integration_guides.md  localization_and_accessibility.md  performance.md  release_notes_template.md  release_process.md  selection_providers.md  selection_workflow.md  testing_strategy.md  user_guide.md  wizard_framework.md
src/: cli.rs  errors.rs  lib.rs
src/cli/: core.rs  forms.rs  help.rs  io.rs  mod.rs  output.rs  registry.rs  selection.rs  selectors.rs  shell.rs  shell_context.rs  state.rs
src/config/: mod.rs
src/core/: ledger_manager.rs  mod.rs  utils.rs
src/currency/: mod.rs
src/domain/: account.rs  category.rs  common.rs  ledger.rs  mod.rs  transaction.rs
src/ffi/: mod.rs
src/ledger/: account.rs  budget.rs  category.rs  ledger.rs  mod.rs  recurring.rs  time_interval.rs  transaction.rs
src/storage/: json_backend.rs  mod.rs
src/utils/: build_info.rs  mod.rs  persistence.rs
tests/: account_list_integration_tests.rs  backup_list_integration_tests.rs  category_budget.rs  category_list_integration_tests.rs  cli_script.rs  cli_tests.rs  currency_tests.rs  detail_actions_tests.rs  detail_view_tests.rs  ffi_integration.rs  ledger_list_integration_tests.rs  navigation_banner_tests.rs  navigation_legacy_command_tests.rs  navigation_main_menu_tests.rs  navigation_norm_tests.rs  navigation_submenu_tests.rs  navigation_wizard_tests.rs  persistence_suite.rs  persistence_tests.rs  phase2_time_and_recurrence.rs  recurring_list_integration_tests.rs  simulation_flow.rs  simulation_list_integration_tests.rs  simulation_tests.rs  smoke_test.rs  stress_suite.rs  table_renderer_tests.rs  transaction_list_integration_tests.rs
tests/common/: mod.rs
tests/navigation/: nav_key_tests.rs
tests/ui/: prompt_tests.rs
(+224 files in other folders)
