[package]
name = "budget_core"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1.4", features = ["serde", "v4"] }

[dev-dependencies]
assert_fs = "1.1"
tempfile = "3.8"

[[bin]]
name = "budget_core_cli"
path = "src/cli.rs"
