[package]
name = "budget_core"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = []
ffi = []

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1.4", features = ["serde", "v4"] }
colored = "2.1"
dialoguer = "0.11"
rustyline = { version = "14", features = ["custom-bindings"] }
strsim = "0.11"
shell-words = "1.1"
dirs = "5.0"

[build-dependencies]
cbindgen = "0.26"
chrono = { version = "0.4", features = ["clock"] }

[lib]
crate-type = ["rlib", "cdylib"]

[dev-dependencies]
assert_fs = "1.1"
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.1"
libloading = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "budget_core_cli"
path = "src/bin/budget_core_cli.rs"
