[package]
name = "bufy-config"
version = "0.1.0"
edition = "2021"

[lib]
name = "bufy_config"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.10"
